--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.13.6",
     "@apollo/server": "^4.12.0",
     "@as-integrations/next": "^3.2.0",
+    "@headlessui/react": "^2.2.1",
     "@supabase/supabase-js": "^2.49.4",
     "antd": "^5.24.6",
     "graphql": "^16.10.0",
