--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-uuid": "^2.0.0",
+    "reactstrap": "^9.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
