--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/server": "^4.12.0",
     "@as-integrations/next": "^3.2.0",
     "@headlessui/react": "^2.2.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.4",
     "antd": "^5.24.6",
     "graphql": "^16.10.0",
@@ -21,6 +22,8 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-multi-select-component": "^4.3.4",
+    "react-toastify": "^11.0.5",
     "react-uuid": "^2.0.0",
     "reactstrap": "^9.2.3"
   },
