--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "antd": "^5.24.6",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-multi-select-component": "^4.3.4",
     "react-toastify": "^11.0.5",
     "react-uuid": "^2.0.0",
