--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.4",
     "antd": "^5.24.6",
+    "compromise": "^14.14.4",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "leaflet": "^1.9.4",
