--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "15.2.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-multi-select-component": "^4.3.4",
     "react-toastify": "^11.0.5",
