--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,5 @@ jobs:
         environment_name: ${{ secrets.EB_ENVIRONMENT_NAME }}
         region: ${{ secrets.AWS_REGION }}
         version_label: ${{ github.sha }}
-        zip_file: deploy.zip
-        s3_bucket: ${{ secrets.EB_S3_BUCKET }}
+        deployment_package: deploy.zip
 
