--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,4 +49,5 @@ jobs:
         region: ${{ secrets.AWS_REGION }}
         version_label: ${{ github.sha }}
         deployment_package: deploy.zip
+        use_existing_version_if_available: true
 
